deployment-pr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pr-MYAPP
  namespace: api-dev
  labels:
    app: pr-MYAPP
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-api-dev-pr-MYAPP
      app: pr-MYAPP
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-api-dev-pr-MYAPP
        app: pr-MYAPP
    spec:
      containers:
      - env:
        - name: DATABASE_HOST
          value: 10.100.112.13
        - name: DATABASE_HOST_ANALYTICS
          value: 35.222.130.138
        - name: HOST
          value: 0.0.0.0
        image: us.gcr.io/sage-mind-254718/exp-engine-pr:MYAPP
        imagePullPolicy: Always
        name: pr-MYAPP
        ports:
        - containerPort: 1337
          name: 1337tcp01
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
