service-pr.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: api-dev
  name: pr-MYAPP
spec:
  type: NodePort
  selector:
    app: pr-MYAPP
  ports:
    - port: 1337
      targetPort: 1337
